# py-research

./: .buildinfo  .gitignore  .releaserc.js  LICENSE  README.md  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: README.doctree
.doctrees/docs/ref-api/: index.doctree
.doctrees/docs/ref-api/py/: modules.doctree  py_research.caching.doctree  py_research.colors.doctree  py_research.data.doctree  py_research.db.base.doctree  py_research.db.conflicts.doctree  py_research.db.doctree  py_research.db.importing.doctree  py_research.doctree  py_research.enums.doctree  py_research.files.doctree  py_research.geo.doctree  py_research.hashing.doctree  py_research.intl.doctree  py_research.plots.doctree  py_research.ranking.doctree  py_research.reflect.deps.doctree  py_research.reflect.dist.doctree  py_research.reflect.doctree  py_research.reflect.env.doctree  py_research.reflect.ref.doctree  py_research.reflect.runtime.doctree  py_research.sql.doctree  py_research.stats.doctree  py_research.tables.doctree  py_research.telemetry.doctree  py_research.time.doctree
.github/workflows/: docs.yml  lint-and-test.yml  release.yml
_modules/: index.html
_modules/py_research/: caching.html  colors.html  data.html  enums.html  files.html  geo.html  hashing.html  intl.html  plots.html  ranking.html  reflect.html  sql.html  stats.html  tables.html  telemetry.html  time.html
_modules/py_research/db/: base.html  conflicts.html  importing.html
_modules/py_research/reflect/: deps.html  dist.html  env.html  ref.html  runtime.html
_sources/: README.md.txt
_sources/docs/ref-api/: index.md.txt
_sources/docs/ref-api/py/: modules.rst.txt  (+26 more)
docs/: db-core-classes.mmd  how-to-add-dependencies.md  how-to-develop.md  how-to-generate-docs.md  how-to-setup-python-env.md  ref-code-conventions-and-tools.md  ref-directory-structure.md
docs/ref-api/: .gitignore  index.html
docs/ref-api/py/: modules.html  py_research.caching.html  py_research.colors.html  py_research.data.html  py_research.db.base.html  py_research.db.conflicts.html  py_research.db.html  py_research.db.importing.html  py_research.enums.html  py_research.files.html  py_research.geo.html  py_research.hashing.html  py_research.html  py_research.intl.html  py_research.plots.html  py_research.ranking.html  py_research.reflect.deps.html  py_research.reflect.dist.html  py_research.reflect.env.html  py_research.reflect.html  py_research.reflect.ref.html  py_research.reflect.runtime.html  py_research.sql.html  py_research.stats.html  py_research.tables.html  py_research.telemetry.html  py_research.time.html
exp/: nested_data.json  schema.py  test.xlsx  test_api_client.ipynb  test_db.ipynb  test_db_schema.py
exp/gpt-4-img/: ai.py  generate-st.py  generate.ipynb
scripts/: find_outdated_deps.py
src/py_research/: __init__.py  api_client.py  async_tools.py  caching.py  colors.py  data.py  db.py  enums.py  files.py  geo.py  hashing.py  intl.py  plots.py  ranking.py  reflect.py  render.py  sql.py  stats.py  tables.py  telemetry.py  time.py  types.py
src/py_research/conversion/: __init__.py  common.py  converters.py
src/py_research/db/: __init__.py  abstract.py  async_sources.py  base.py  conflicts.py  connection.py  data.py  data_models.py  data_source.py  databases.py  datasources.py  db_schemas.py  dbs.py  importing.py  models.py  old_db.py  props.py  records.py  rel_records.py  relations.py  rels.py  schema.py  sources.py  spec.py  sql.py  sql_tables.py  sql_utils.py  sqlite_utils.py  table.py  transform.py  utils.py
src/py_research/plots/: __init__.py  responsive_plotly.js
src/py_research/reflect/: __init__.py  deps.py  dist.py  env.py  ref.py  runtime.py  types.py
src/py_research/sql/: db.py  schema.py  utils.py
src/py_research/storage/: __init__.py  common.py  storables.py
tests/: README.md
tests/py_research/: test.ipynb  test_caching.py  test_colors.py  test_db.py  test_db_base.py  test_db_importing.py  test_enums.py  test_files.py  test_geo.py  test_hashing.py  test_intl.py  test_plots.py  test_ranking.py  test_reflect.py  test_stats.py  test_tables.py  test_telemetry.py  test_time.py
tests/py_research/test_db/: nested_data.json  test_importing.py
