[project]
authors = [{ name = "Lorenzo Wormer", email = "l.wormer@mailbox.org" }]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]
dependencies = [
    "pandas<3.0,>=2.2.0",
    "PyYAML<7.0,>=6.0",
    "openpyxl<4.0.0,>=3.0.9",
    "country-converter<2.0,>=1.2",
    "pydantic<3.0,>=2.5.3",
    "streamlit<2.0.0,>=1.7.0",
    "tqdm<5.0.0,>=4.62.3",
    "sqlalchemy<3.0.0,>=2.0.7",
    "strenum<1.0.0,>=0.4.10",
    "stqdm<1.0.0,>=0.0.5",
    "structlog<24.0.0,>=23.1.0",
    "webcolors<2.0,>=1.13",
    "deep-translator<2.0.0,>=1.11.0",
    "babel<3.0.0,>=2.12.1",
    "numpy<2.0.0,>=1.24.3",
    "pdfkit<2.0.0,>=1.0.0",
    "imgkit<2.0.0,>=1.2.3",
    "typing-extensions<5.0.0,>=4.7.1",
    "plotly<6.0.0,>=5.16.1",
    "GitPython>=3.1.40",
    "beautifulsoup4>=4.12.2",
    "importlib-metadata>=6.11.0",
    "pandas-stubs>=2.1.4.231227",
    "packaging>=23.2",
    "requests>=2.31.0",
    "pydantic-core>=2.14.6",
    "notebook>=7.0.6",
    "ipywidgets>=8.1.1",
    "ipython>=8.21.0",
    "beartype>=0.17.0",
    "yarl>=1.9.4",
]
name = "py-research"
description = "Collection of utilities for R&D coding in Python ðŸ"
readme = "README.md"

[project.urls]
Documentation = "https://cloudlane-one.github.io/py-research/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
  "black>=24",
  "pytest>=7.4.3",
  "sphinx>=7.2.6",
  "pygments>=2.17.2",
  "nbsphinx>=0.9.3",
  "myst-parser>=2.0.0",
  "pydata-sphinx-theme>=0.14.4",
  "autodoc-pydantic>=1.9.0",
  "deptry>=0.12.0",
  "ruff>=0.1.7",
  "pytest-cov>=4.1.0",
]

[tool.pdm.build]
includes = ["src/py_research"]

[tool.pdm.version]
source = "scm"

[tool.ruff]
# Enable following linters:
# - pycodestyle (`E`, `W`)
# - Pyflakes (`F`)
# - mccabe (`C90`)
# - pep8-naming (`N`)
# - pydocstyle (`D`)
# - pyupgrade (`UP`)
select = ["E", "W", "F", "C90", "N", "D", "UP"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 12

[tool.deptry]
known_first_party = ["py_research"]

[tool.deptry.per_rule_ignores]
DEP002 = ["openpyxl", "pandas-stubs", "notebook", "ipywidgets"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.pyright]
reportMatchNotExhaustive = true
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
reportOverlappingOverload = true
